# quell

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: sync_detection.rs  vt_diffing.rs
research/: COMPETITIVE-LANDSCAPE.md  INITIAL PROJECT RESEARCH.md  PRIVACY-TRUST-MODEL.md  USER-PERSONAS.md  UX-FEATURES.md  architecture.md  keyboard-input.md  progress-visualization.md  session-management.md
scripts/: install.ps1  install.sh  validate-scroll-fix.sh
scripts/homebrew/: README.md  quell.rb
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs  tool.rs
src/conpty/: console_mode.rs  error.rs  mod.rs  pipes.rs  session.rs  sys.rs
src/history/: escape_filter.rs  line_buffer.rs  mod.rs  output_filter.rs
src/input/: mod.rs  unix.rs
src/platform/: mod.rs  unix_impl.rs  windows_impl.rs
src/proxy/: events.rs  key_translator.rs  mod.rs  output_sink.rs  recorder.rs  render_coalescer.rs
src/vt/: diff_renderer.rs  mod.rs  sync_detector.rs
tests/integration/: main.rs  unix_proxy_tests.rs
tests/unit/: config_tests.rs  diff_renderer_tests.rs  line_buffer_tests.rs  main.rs  mod.rs  proxy_event_tests.rs  render_coalescer_tests.rs  replay_tests.rs  sync_detector_tests.rs
