[package]
name = "terminal-exploration"
version = "0.1.0"
edition = "2024"
description = "Windows-native terminal proxy for AI CLI tools — eliminates scroll-jumping and flicker"
license = "MIT"
repository = "https://github.com/FurbySoup/terminal-exploration"

[lib]
name = "terminal_exploration"
path = "src/lib.rs"

[[bin]]
name = "terminal-exploration"
path = "src/main.rs"

[dependencies]
# VT100 terminal emulator — core of the differential rendering engine
vt100 = "0.15"

# SIMD-accelerated byte search for sync block detection
memchr = "2"

# VT escape sequence parser
vte = "0.15"

# Escape sequence parser for history filtering
termwiz = "0.22"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Inter-thread communication
crossbeam-channel = "0.5"

# Error handling
anyhow = "1"
thiserror = "2"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Config file support
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Platform directories for config
dirs = "6"

# Windows API bindings
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }

[dev-dependencies]
# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
test-log = { version = "0.2", features = ["trace"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vt_diffing"
harness = false

[[bench]]
name = "sync_detection"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 1
